# fastcache

./: .dockerignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docker-build-push.yml
bench/: bench.cpp  loopback.sh  relay_shards.sh
config/: default.json  request.json
container/: Containerfile
src/: cacheserver.cpp  cacheserver.h  config.cpp  config.h  fastcache.cpp  threadworker.cpp  threadworker.h
supervisor/: .env.example  .gitignore  Makefile  pyproject.toml
supervisor/src/cache_supervisor/: config.py  db.py  dependencies.py  main.py  models.py  process.py  reconcile.py  tables.py
supervisor/src/cache_supervisor/routes/: __init__.py  cache.py
